# SSTForkMountFirmware

./: .gitignore  README.md  structure_diagram.odg  zipfirmware_example.sh
electronics/: README.md  SST_kicad_sym.lib
forkmount/: forkmount.h  forkmount.ino  sst_console.cpp  stepper_drivers.cpp  stepper_drivers.h
forkmount_prototype2/: SerialCommand.h  command.cpp  command.h  forkmount.h  forkmount_prototype2.ino  stepper_drivers.cpp  stepper_drivers.h
piside/: README  README.md  autohotspot  autohotspot.service  clearhomepyc.service  compose.yaml  dnsmasq-eth0.service  (+4 more)
piside/server/: .env  Dockerfile  Pipfile  affine_fit.py  arc_center_finder.py  control.py  ctrl_dnsmasq.py  db.py  default_settings.json  handpad_firmware.py  handpad_menu.py  handpad_server.py  img_average.py  lx200proto_server.py  main.py  motion.py  network.py  plot_slew_data.py  pointing_model.py  polar_align_assist.py  post_update.py  pyproject.toml  requirements.txt  rmpyc.sh  settings.json  settings.json.example  settings.py  sim_cam_info.json  simulation_helper.py  skyconv.py  skyconv_hadec.py  solver.py  sstchuck.py  sstutil.py  stellarium_server.py  stepper_control.py  test_db.py  test_motion.py  test_pointing_model.py  test_skyconv.py  (+2 more)
piside/server/simulation_files/: iw_output
piside/server/simulation_files/etc/hostapd/: hostapd.conf
piside/server/simulation_files/etc/network/interfaces.d/: defaults
piside/server/simulation_files/etc/wpa_supplicant/: wpa_supplicant.conf
piside/server/sql/: get_elevation.py  makedb.notes
piside/server/vmc_simulator/: __init__.py  cb_sim.py
(+243 files in other folders)
